force-app/main/default/objects/Asset/fields/Risk_Detail_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Detail_Flag__c</fullName>
    <label>Risk Detail Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>BUILDING</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>BUILDING CONTENT</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>MACHINERY</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>STOCK</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>INVENTORY</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>HAK PAKAI</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>BANK GARANSI</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>RENOVATION COST</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>BUSINESS Interoption LOP</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>OTHERS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>