force-app/main/default/objects/Asset/fields/risk_detail_id__c.field-meta.xml
<CustomField>
    <fullName>risk_detail_id__c</fullName>
    <label>risk detail id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>