force-app/main/default/objects/Asset/fields/Risk_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_ID__c</fullName>
    <label>Risk ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>