force-app/main/default/objects/Asset/fields/risk_situation__c.field-meta.xml
<CustomField>
    <fullName>risk_situation__c</fullName>
    <label>risk situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>