force-app/main/default/objects/Asset/fields/Risk_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type_Description__c</fullName>
    <label>Risk Type Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>