force-app/main/default/objects/Asset/fields/Route_To_Voyage_Cover_Only__c.field-meta.xml
<CustomField>
    <fullName>Route_To_Voyage_Cover_Only__c</fullName>
    <label>Route To (Voyage Cover Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>