force-app/main/default/objects/Asset/fields/Section_2_Desc__c.field-meta.xml
<CustomField>
    <fullName>Section_2_Desc__c</fullName>
    <label>Section 2 Desc</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>