force-app/main/default/objects/Asset/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Asset Section</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Section)</relationshipLabel>
    <relationshipName>Risks2</relationshipName>
    <type>Lookup</type>
</CustomField>