force-app/main/default/objects/Asset/fields/Section_ID__c.field-meta.xml
<CustomField>
    <fullName>Section_ID__c</fullName>
    <label>Section ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>