force-app/main/default/objects/Asset/fields/Shipping_Document__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Document__c</fullName>
    <label>Shipping Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>