force-app/main/default/objects/Asset/fields/Short_Fall__c.field-meta.xml
<CustomField>
    <fullName>Short_Fall__c</fullName>
    <label>Short Fall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>