force-app/main/default/objects/Asset/fields/SKEP_Date__c.field-meta.xml
<CustomField>
    <fullName>SKEP_Date__c</fullName>
    <formula>SKEP_No__r.SKEP_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKEP Date</label>
    <type>Date</type>
</CustomField>