force-app/main/default/objects/Asset/fields/SKEP_No__c.field-meta.xml
<CustomField>
    <fullName>SKEP_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKEP No</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Risks (SKEP No)</relationshipLabel>
    <relationshipName>Risks1</relationshipName>
    <type>Lookup</type>
</CustomField>