force-app/main/default/objects/Asset/fields/Sum_Insured_for_Maximum_Indemnity_Period__c.field-meta.xml
<CustomField>
    <fullName>Sum_Insured_for_Maximum_Indemnity_Period__c</fullName>
    <label>Sum Insured for Maximum Indemnity Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>