force-app/main/default/objects/Asset/fields/Tahun_Pembelian_Sepeda__c.field-meta.xml
<CustomField>
    <fullName>Tahun_Pembelian_Sepeda__c</fullName>
    <label>Tahun Pembelian Sepeda</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>