force-app/main/default/objects/Asset/fields/Tanggal_Lahir__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Lahir__c</fullName>
    <label>Tanggal Lahir</label>
    <type>Date</type>
</CustomField>