force-app/main/default/objects/Asset/fields/Tempat_Lahir__c.field-meta.xml
<CustomField>
    <fullName>Tempat_Lahir__c</fullName>
    <label>Tempat Lahir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>