force-app/main/default/objects/Asset/fields/Territorial_Limit__c.field-meta.xml
<CustomField>
    <fullName>Territorial_Limit__c</fullName>
    <label>Territorial Limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International - World wide (Including Schengen)</fullName>
            </value>
            <value>
                <fullName>International - EU (Including Schengen) , Australia, NZ</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>