force-app/main/default/objects/Asset/fields/Territorial_Limit_PA__c.field-meta.xml
<CustomField>
    <fullName>Territorial_Limit_PA__c</fullName>
    <label>Territorial Limit PA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>