force-app/main/default/objects/Asset/fields/To_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Address__c</fullName>
    <label>To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>