force-app/main/default/objects/Asset/fields/To_Final_Place_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>To_Final_Place_of_Destination__c</fullName>
    <label>To / Final Place of Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>