force-app/main/default/objects/Asset/fields/Total_Amount_Section_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Section_1__c</fullName>
    <label>Total Amount Section 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>