force-app/main/default/objects/Asset/fields/Total_Amount_Section_3__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Section_3__c</fullName>
    <label>Total Amount Section 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>