force-app/main/default/objects/Asset/fields/Total_Premi_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Premi_Amount__c</fullName>
    <label>Total Premi Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>