force-app/main/default/objects/Asset/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <label>Transmission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Automatic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>