force-app/main/default/objects/Asset/fields/Trip_Package__c.field-meta.xml
<CustomField>
    <fullName>Trip_Package__c</fullName>
    <label>Trip Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Group - Golden Rama</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>