force-app/main/default/objects/Asset/fields/TSI_WT__c.field-meta.xml
<CustomField>
    <fullName>TSI_WT__c</fullName>
    <label>TSI WT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>