force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Road Bike</fullName>
            </value>
            <value>
                <fullName>Cruiser / City Bike</fullName>
            </value>
            <value>
                <fullName>Hybrid Bike</fullName>
            </value>
            <value>
                <fullName>BMX</fullName>
            </value>
            <value>
                <fullName>Fixie</fullName>
            </value>
            <value>
                <fullName>Folding Bike</fullName>
            </value>
            <value>
                <fullName>Electric Bike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>