force-app/main/default/objects/Asset/fields/Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Type_Description__c</fullName>
    <label>Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry - Niaga</fullName>
            </value>
            <value>
                <fullName>Non Industry - Niaga</fullName>
            </value>
            <value>
                <fullName>Non Industry - Non Niaga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>