force-app/main/default/objects/Asset/fields/Type_Description_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Type_Description_Carrier__c</fullName>
    <label>Type Description (Carrier)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>COB__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>57</fullName>
                <label>Oil Barge</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Kapal Isap Produksi</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Floating Dock</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Cargo Vessel</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Jet Engine Aircraft</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>General Cargo Iron Vessel</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>General Cargo Wooden Vessel (KKM)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Truck (Single Truck)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tug Boat &amp; Barge</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Fiberglass Vessel</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Kapal Layar Motor (KLM)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Landing Craft Tank (LCT)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Tug Boat</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Iron Tug &amp; Barge Single Tow</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Wooden Tug &amp; Barge Double Tow</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Passenger Vessel</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Mooring Boat</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Aluminium</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Bulk Carrier Cargo</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>Fuel Storage Oil</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>Heavy Lift Vessel</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Warship</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Pilot Boat</label>
            </value>
            <value>
                <fullName>54</fullName>
                <label>Chemical Tanker</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>LPG Tanker</label>
            </value>
            <value>
                <fullName>56</fullName>
                <label>LNG Tanker</label>
            </value>
            <value>
                <fullName>49</fullName>
                <label>Ferry</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>Container Vessel</label>
            </value>
            <value>
                <fullName>44</fullName>
                <label>Fishing Vessel</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>Gas Carrier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>