force-app/main/default/objects/Asset/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type of Business</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Type of Business)</relationshipLabel>
    <relationshipName>Risks6</relationshipName>
    <type>Lookup</type>
</CustomField>