force-app/main/default/objects/Asset/fields/Type_of_Plant__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type of Plant</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Type of Plant)</relationshipLabel>
    <relationshipName>Risks7</relationshipName>
    <type>Lookup</type>
</CustomField>