force-app/main/default/objects/Asset/fields/Type_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Type_Vehicle__c</fullName>
    <formula>Model__r.Parent_Record__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Vehicle</label>
    <type>Text</type>
</CustomField>