force-app/main/default/objects/Asset/fields/Type_Vehicle_Id__c.field-meta.xml
<CustomField>
    <fullName>Type_Vehicle_Id__c</fullName>
    <formula>Model__r.PARENT_VEHICLE_TYPE_ID__c</formula>
    <label>Type Vehicle Id</label>
    <type>Text</type>
</CustomField>