force-app/main/default/objects/Asset/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <inlineHelpText>Referensi dari data Industry</inlineHelpText>
    <label>Utilization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Private (Pribadi/ Dinas Perusahaan)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Commercial (Disewakan/Dikaryakan)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>