force-app/main/default/objects/Asset/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Brand</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Vehicle Brand)</relationshipLabel>
    <relationshipName>Risks4</relationshipName>
    <type>Lookup</type>
</CustomField>