force-app/main/default/objects/Asset/fields/Vehicle_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand_Name__c</fullName>
    <formula>Model__r.PARENT_BRAND_ID__r.Name</formula>
    <label>Vehicle Brand Name</label>
    <type>Text</type>
</CustomField>