force-app/main/default/objects/Asset/fields/Vehicle_Brand_XXX__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand_XXX__c</fullName>
    <label>Vehicle Brand_XXX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>