force-app/main/default/objects/Asset/fields/vehicle_condition__c.field-meta.xml
<CustomField>
    <fullName>vehicle_condition__c</fullName>
    <label>vehicle condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>