force-app/main/default/objects/Asset/fields/Vehicle_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Market_Value__c</fullName>
    <label>Vehicle Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>