force-app/main/default/objects/Asset/fields/Vehicle_Market_Value_IDR__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Market_Value_IDR__c</fullName>
    <label>Vehicle Market Value IDR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>