force-app/main/default/objects/Asset/fields/vehicle_model_desc__c.field-meta.xml
<CustomField>
    <fullName>vehicle_model_desc__c</fullName>
    <label>vehicle model desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>