force-app/main/default/objects/Asset/fields/vehicle_security_type__c.field-meta.xml
<CustomField>
    <fullName>vehicle_security_type__c</fullName>
    <label>vehicle security type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>