force-app/main/default/objects/Asset/fields/Vehicle_Territory__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Territory__c</fullName>
    <label>Vehicle Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Land</fullName>
            </value>
            <value>
                <fullName>On Board/Barge</fullName>
            </value>
            <value>
                <fullName>On River</fullName>
            </value>
            <value>
                <fullName>On Swamp</fullName>
            </value>
            <value>
                <fullName>On Shore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>