force-app/main/default/objects/Asset/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Sedan</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Jeep</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Minibus</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Box</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Pick Up</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Station Wagon</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Double Cabin</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Bus</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Truck</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Heavy Equipment</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Sepeda Motor</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Truck - Tangki</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>