force-app/main/default/objects/Asset/fields/Vessel_Code__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Code__c</fullName>
    <formula>Vessel_Name__r.ext_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel Code</label>
    <type>Text</type>
</CustomField>