force-app/main/default/objects/Asset/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel Name</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Vessel Name)</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>