force-app/main/default/objects/Asset/fields/Vessel_Principal__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Principal__c</fullName>
    <label>Vessel Principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>