force-app/main/default/objects/Asset/fields/Vessel_Type_Construction__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Type_Construction__c</fullName>
    <label>Vessel Type/Construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warship</fullName>
            </value>
            <value>
                <fullName>Pilot Boat</fullName>
            </value>
            <value>
                <fullName>Chemical Tanker</fullName>
            </value>
            <value>
                <fullName>LPG Tanker</fullName>
            </value>
            <value>
                <fullName>LNG Tanker</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Container Vessel</fullName>
            </value>
            <value>
                <fullName>Fishing Vessel</fullName>
            </value>
            <value>
                <fullName>Gas Carrier</fullName>
            </value>
            <value>
                <fullName>Survey &amp; Research</fullName>
            </value>
            <value>
                <fullName>Yacht</fullName>
            </value>
            <value>
                <fullName>Towing &amp; Salvage</fullName>
            </value>
            <value>
                <fullName>Ferry Roro</fullName>
            </value>
            <value>
                <fullName>Self Propelled Oil Barge (SPOB)</fullName>
            </value>
            <value>
                <fullName>Anchor Boat</fullName>
            </value>
            <value>
                <fullName>Grab Dredger</fullName>
            </value>
            <value>
                <fullName>Supply Vessel</fullName>
            </value>
            <value>
                <fullName>Oil Tanker</fullName>
            </value>
            <value>
                <fullName>Crew Boat</fullName>
            </value>
            <value>
                <fullName>Roro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>