force-app/main/default/objects/Asset/fields/Volcanic_Zone__c.field-meta.xml
<CustomField>
    <fullName>Volcanic_Zone__c</fullName>
    <label>Volcanic Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>