force-app/main/default/objects/Asset/fields/X1st_Surplus_Amount__c.field-meta.xml
<CustomField>
    <fullName>X1st_Surplus_Amount__c</fullName>
    <label>1st Surplus Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>