force-app/main/default/objects/Asset/fields/X2nd_Surplus__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Surplus__c</fullName>
    <label>2nd Surplus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>