force-app/main/default/objects/Asset/fields/X3rd_Surplus__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Surplus__c</fullName>
    <label>3rd Surplus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>