force-app/main/default/objects/Asset/fields/Year_of_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Built__c</fullName>
    <label>Year of Built</label>
    <length>255</length>
    <type>Text</type>
</CustomField>