force-app/main/default/objects/Asset/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Assets (Zip Code)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>