force-app/main/default/objects/Asset/fields/Zip_Code_From__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code (From)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Risks (Zip Code (From))</relationshipLabel>
    <relationshipName>Risks2</relationshipName>
    <type>Lookup</type>
</CustomField>