force-app/main/default/objects/Asset/fields/Zip_Code_To__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code (To)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Risks (Zip Code (To))</relationshipLabel>
    <relationshipName>Risks5</relationshipName>
    <type>Lookup</type>
</CustomField>