force-app/main/default/objects/Asset/recordTypes/Perlengkapan_Tambahan.recordType-meta.xml
<RecordType>
    <fullName>Perlengkapan_Tambahan</fullName>
    <active>true</active>
    <description>Sub calculation for Asset Grand Total</description>
    <label>Perlengkapan Tambahan</label>
</RecordType>