force-app/main/default/objects/Asset/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <label>Risk</label>
</RecordType>