force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ASSET.RECORDTYPE</columns>
    <columns>COB__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Place_Port_of_Destination__c</columns>
    <columns>N_K_R__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>Risk</value>
    </filters>
    <label>All Risks</label>
</ListView>